--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,7 @@
               </a>
             </div>
             <div class="col s3 waves-effect waves-circle">
-              <a href="https://ca.linkedin.com/in/tysonb">
+              <a href="http://twitter.com/tabruhn">
                 <i class="small fa fa-twitter shadow"></i>
               </a>
             </div>
@@ -56,63 +56,50 @@
     <div class="col s12 m9 l10">
 
   <!-- Cards Section-->
-      <div id="basic" class="section scrollspy">
-        <p class="caption">Cards are a convenient means of displaying content composed of different types of objects. They’re also well-suited for presenting similar objects whose size or supported actions can vary considerably, like photos with captions of variable length.</p>
-        <h2 class="header">Basic Card</h2>
+
+      <div id="walkinto" class="section scrollspy">
         <div class="row">
-          <div class="col s12 m6">
-            <!-- Basic Card -->
-            <div class="card blue-grey darken-1">
-              <div class="card-content white-text">
+          <!-- Image Card -->
+          <div class="col s12 m12">
+           <h2 class="header">Walkin.to</h2>
+            <p class="caption">
+             Here is the standard card with an image thumbnail.
+            </p>
+            <div class="card">
+              <div class="card-image z-depth-1">
+                <img src="images/walkinto.png">
                 <span class="card-title">Card Title</span>
-                <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+              </div>
+              <div class="card-content">
+                <p>Unique restaurant experiences and deals happening across Hong Kong in real time.</p>
               </div>
               <div class="card-action">
-                <a href="#">This is a link</a>
-                <a href="#">This is a link</a>
+                <a href="http://walkinto.meteor.com">Link to website</a>
               </div>
             </div>
-          </div>
-
-            <div class="col s12">
-              <br>
-              <pre><code class="language-markup">
-      &lt;div class="row">
-        &lt;div class="col s12 m6">
-          &lt;div class="card blue-grey darken-1">
-            &lt;div class="card-content white-text">
-              &lt;span class="card-title">Card Title&lt;/span>
-              &lt;p>I am a very simple card. I am good at containing small bits of information.
-              I am convenient because I require little markup to use effectively.&lt;/p>
-            &lt;/div>
-            &lt;div class="card-action">
-              &lt;a href="#">This is a link&lt;/a>
-              &lt;a href="#">This is a link&lt;/a>
-            &lt;/div>
-          &lt;/div>
-        &lt;/div>
-      &lt;/div>
-            </code></pre>
-            <br>
           </div>
         </div>
       </div>
 
-      <div id="image" class="section scrollspy">
+      <div id="gohometo" class="section scrollspy">
         <div class="row">
           <!-- Image Card -->
-          <div class="col s12 m7">
-           <h2 class="header">Image Card</h2>
+          <div class="col s12 m12">
+           <h2 class="header">gohome.to</h2>
             <div class="card">
-              <div class="card-image">
-                <img src="images/sample-1.jpg">
-                <span class="card-title">Card Title</span>
+              <div class="card-image z-depth-1">
+                <img src="images/gohometo.png">
+                <span class="card-title">gohome.to</span>
               </div>
               <div class="card-content">
-                <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+                <p>Features:</p>
+                <ul>
+                  <li>Full stack javascript (node.js, bootstrap)</li>
+                  <li>Full stack javascript (node.js, bootstrap)</li>
+                </ul>
               </div>
               <div class="card-action">
-                <a href="#">This is a link</a>
+                <a href="http://gohometo.meteor.com">Link to website</a>
               </div>
             </div>
           </div>
@@ -121,29 +108,6 @@
             <p class="caption">
              Here is the standard card with an image thumbnail.
             </p>
-          </div>
-          <div class="col s12">
-            <br>
-            <pre><code class="language-markup">
-      &lt;div class="row">
-        &lt;div class="col s12 m7">
-          &lt;div class="card">
-            &lt;div class="card-image">
-              &lt;img src="images/sample-1.jpg">
-              &lt;span class="card-title">Card Title&lt;/span>
-            &lt;/div>
-            &lt;div class="card-content">
-              &lt;p>I am a very simple card. I am good at containing small bits of information.
-              I am convenient because I require little markup to use effectively.&lt;/p>
-            &lt;/div>
-            &lt;div class="card-action">
-              &lt;a href="#">This is a link&lt;/a>
-            &lt;/div>
-          &lt;/div>
-        &lt;/div>
-      &lt;/div>
-            </code></pre>
-            <br>
           </div>
         </div>
       </div>
@@ -301,20 +265,6 @@
              For a simpler card with less markup, try using a card panel which just has padding and a shadow effect
             </p>
           </div>
-          <div class="col s12">
-            <br>
-            <pre><code class="language-markup">
-    &lt;div class="row">
-      &lt;div class="col s12 m5">
-        &lt;div class="card-panel teal">
-          &lt;span class="white-text">I am a very simple card. I am good at containing small bits of information.
-          I am convenient because I require little markup to use effectively. I am similar to what is called a panel in other frameworks.
-          &lt;/span>
-        &lt;/div>
-      &lt;/div>
-    &lt;/div>
-            </code></pre>
-          </div>
         </div>
       </div>
 
@@ -325,11 +275,14 @@
       <div class="toc-wrapper">
         <div style="height: 1px;">
           <ul class="section table-of-contents">
-            <li><a href="#basic">Basic Card</a></li>
-            <li><a href="#image">Image Card</a></li>
-            <li><a href="#reveal">Card Reveal</a></li>
-            <li><a href="#sizes">Card Sizes</a></li>
-            <li><a href="#panel">Card Panel</a></li>
+            <li><a href="#walkinto">walkin.to</a></li>
+            <li><a href="#gohometo">gohome.to</a></li>
+            <li><a href="#akka">Scala Akka Chat</a></li>
+            <li><a href="#rambda">meteor-rambda</a></li>
+            <li><a href="#noty">meteor-noty</a></li>
+            <li><a href="#projecttweet">Project Tweet</a></li>
+            <li><a href="#challengr">Challengr REST API</a></li>
+            <li><a href="#qstk">QSTK Data Mining</a></li>
           </ul>
         </div>
       </div>
