--- a/portfolio.html
+++ b/portfolio.html
@@ -95,7 +95,6 @@
                 <p>Features:</p>
                 <ul>
                   <li>Full stack javascript (node.js, bootstrap)</li>
-                  <li>Full stack javascript (node.js, bootstrap)</li>
                 </ul>
               </div>
               <div class="card-action">
@@ -112,143 +111,8 @@
         </div>
       </div>
 
-      <div id="reveal" class="section scrollspy">
-        <div class="row">
-          <!-- Pullup Card -->
-          <div class="col s12 m7">
-            <h2 class="header">Card Reveal</h2>
-            <div class="card">
-              <div class="card-image waves-effect waves-block waves-light">
-                <img class="activator" src="images/office.jpg">
-              </div>
-              <div class="card-content">
-                <span class="card-title activator grey-text text-darken-4">Card Title <i class="mdi-navigation-more-vert right"></i></span>
-
-                <p><a href="#!">This is a link</a></p>
-              </div>
-              <div class="card-reveal">
-                <span class="card-title grey-text text-darken-4">Card Title <i class="mdi-navigation-close right"></i></span>
-                <p>Here is some more information about this product that is only revealed once clicked on.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col s12 m5">
-            <br><br><br><br>
-            <p class="caption">
-             Here you can add a card that reveals more information once clicked. Just add the <code class="language-markup">card-reveal</code> div with a <code class="language-markup">span.card-title</code> inside to make this work. Add the class <code class="language-markup">activator</code> to an element inside the card to allow it to open the card reveal.
-            </p>
-          </div>
-          <div class="col s12">
-            <br>
-            <pre><code class="language-markup">
-      &lt;div class="card">
-        &lt;div class="card-image waves-effect waves-block waves-light">
-          &lt;img class="activator" src="images/office.jpg">
-        &lt;/div>
-        &lt;div class="card-content">
-          &lt;span class="card-title activator grey-text text-darken-4">Card Title &lt;i class="mdi-navigation-more-vert right">&lt;/i>&lt;/span>
-          &lt;p>&lt;a href="#">This is a link&lt;/a>&lt;/p>
-        &lt;/div>
-        &lt;div class="card-reveal">
-          &lt;span class="card-title grey-text text-darken-4">Card Title &lt;i class="mdi-navigation-close right">&lt;/i>&lt;/span>
-          &lt;p>Here is some more information about this product that is only revealed once clicked on.&lt;/p>
-        &lt;/div>
-      &lt;/div>
-            </code></pre>
-            <br>
-          </div>
-        </div>
-      </div>
 
 
-      <div id="sizes" class="section scrollspy">
-        <div class="row">
-          <!-- Small Card -->
-          <div class="col s12">
-            <h2 class="header">Card Sizes</h2>
-            <p class="caption">If you want to have uniformly sized cards, you can use our premade size classes. Just add the size class in addition to the card class. </p>
-            <pre><code class="language-markup">
-  &lt;div class="card small">
-    &lt;!-- Card Content -->
-  &lt;/div>
-            </code></pre>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col s12 m6">
-            <h4 class="light">Small</h4>
-            <div class="card small">
-              <div class="card-image">
-                <img src="images/sample-1.jpg">
-                <span class="card-title">Card Title</span>
-              </div>
-              <div class="card-content">
-                <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
-              </div>
-              <div class="card-action">
-                <a href="#">This is a link</a>
-                <a href="#">This is a link</a>
-              </div>
-            </div>
-          </div>
-          <div class="col s12 m6">
-            <br><br>
-            <p class="caption">
-             The Small Card limits the height of the card to 300px.
-            </p>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col s12 m7">
-            <h4 class="light">Medium</h4>
-            <div class="card medium">
-              <div class="card-image">
-                <img src="images/sample-1.jpg">
-                <span class="card-title">Card Title</span>
-              </div>
-              <div class="card-content">
-                <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
-              </div>
-              <div class="card-action">
-                <a href="#">This is a link</a>
-                <a href="#">This is a link</a>
-              </div>
-            </div>
-          </div>
-          <div class="col s12 m5">
-            <br><br>
-            <p class="caption">
-             The Medium Card limits the height of the card to 400px.
-            </p>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col s12 m8">
-            <h4 class="light">Large</h4>
-            <div class="card large">
-              <div class="card-image">
-                <img src="images/sample-1.jpg">
-                <span class="card-title">Card Title</span>
-              </div>
-              <div class="card-content">
-                <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
-              </div>
-              <div class="card-action">
-                <a href="#">This is a link</a>
-                <a href="#">This is a link</a>
-              </div>
-            </div>
-          </div>
-          <div class="col s12 m4">
-            <br><br>
-            <p class="caption">
-             The Large Card limits the height of the card to 500px.
-            </p>
-          </div>
-        </div>
-      </div>
 
 
       <div id="panel" class="section scrollspy">
@@ -282,7 +146,7 @@
             <li><a href="#noty">meteor-noty</a></li>
             <li><a href="#projecttweet">Project Tweet</a></li>
             <li><a href="#challengr">Challengr REST API</a></li>
-            <li><a href="#qstk">QSTK Data Mining</a></li>
+            <!-- <li><a href="#qstk">QSTK Data Mining</a></li> -->
           </ul>
         </div>
       </div>
