cleanup card layout

--- a/portfolio.html
+++ b/portfolio.html
@@ -112,23 +112,73 @@
       </div>
 
 
-
-
-
-      <div id="panel" class="section scrollspy">
+      <div id="akka" class="section scrollspy">
         <div class="row">
           <!-- Card Panel -->
           <div class="col s12 m5">
-            <h2 class="header">Card Panel</h2>
-            <div class="card-panel teal"> <span class="white-text">I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively. I am similar to what is called a panel in other frameworks.</span>
+            <h2 class="header">Scala Akka Chat</h2>
+            <div class="card">
+              <div class="card-panel teal"> <span class="white-text">
+                  A simple chat example to illustrate akka-http with scala.js frontend. Chat application is websocket based.
+               </span>
+                <div class="card-action">
+                  <a href="https://github.com/tabruhn/akka-chat-playground">View Code on Github</a>
+                </div>
+              </div>
             </div>
           </div>
-          <div class="col s12 m7">
-            <br><br><br><br>
+          <!-- <div class="col s12 m5">
+            <br><br><br><br
             <p class="caption">
-             For a simpler card with less markup, try using a card panel which just has padding and a shadow effect
+             Here is the standard card with an image thumbnail.
             </p>
+            </div> -->
+        </div>
+      </div>
+      <div id="ramda" class="section scrollspy">
+        <div class="row">
+          <!-- Card Panel -->
+          <div class="col s12 m5">
+            <h2 class="header">Meteor-Rambda</h2>
+            <div class="card">
+              <div class="card-panel teal"> <span class="white-text">
+                 Functional programming library for javascript brought to Meteor.js.
+               </span>
+                <div class="card-action">
+                  <a href="http://github.com/tabruhn/meteor-rambda">View Code on Github</a>
+                </div>
+              </div>
+            </div>
           </div>
+          <!-- <div class="col s12 m5">
+            <br><br><br><br
+            <p class="caption">
+             Here is the standard card with an image thumbnail.
+            </p>
+            </div> -->
+        </div>
+      </div>
+      <div id="noty" class="section scrollspy">
+        <div class="row">
+          <!-- Card Panel -->
+          <div class="col s12 m5">
+            <h2 class="header">Meteor-Noty</h2>
+            <div class="card">
+              <div class="card-panel teal"> <span class="white-text">
+                 Meteor wrapper for noty.js. Allows for quick and flexible instantiation of notifications to the DOM.
+               </span>
+                <div class="card-action">
+                  <a href="http://github.com/tabruhn/meteor-noty">View Code on Github</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- <div class="col s12 m5">
+            <br><br><br><br
+            <p class="caption">
+             Here is the standard card with an image thumbnail.
+            </p>
+            </div> -->
         </div>
       </div>
 
