rough portfolio completed

--- a/portfolio.html
+++ b/portfolio.html
@@ -158,6 +158,7 @@
             </div> -->
         </div>
       </div>
+
       <div id="noty" class="section scrollspy">
         <div class="row">
           <!-- Card Panel -->
@@ -182,6 +183,53 @@
         </div>
       </div>
 
+      <div id="projecttweet" class="section scrollspy">
+        <div class="row">
+          <!-- Card Panel -->
+          <div class="col s12 m5">
+            <h2 class="header">Project Tweet</h2>
+            <div class="card">
+              <div class="card-panel teal"> <span class="white-text">
+                 Data Visualization of Stock Market Sentiment on Twitter and Performance of Stocks in the Market. Python, js, timeline.js, css
+               </span>
+                <div class="card-action">
+                  <a href="http://github.com/tabruhn/project-tweet">View Code on Github</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- <div class="col s12 m5">
+            <br><br><br><br
+            <p class="caption">
+             Here is the standard card with an image thumbnail.
+            </p>
+            </div> -->
+        </div>
+      </div>
+
+      <div id="challengr" class="section scrollspy">
+        <div class="row">
+          <!-- Card Panel -->
+          <div class="col s12 m5">
+            <h2 class="header">Challenger REST API</h2>
+            <div class="card">
+              <div class="card-panel teal"> <span class="white-text">
+                  JSON api which implements the full JSON spec for a quiz application. Backend is written in node.js with a rethinkdb persistence layer.
+               </span>
+                <div class="card-action">
+                  <a href="//github.com/tabruhn/challengr-api">View Code on Github</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- <div class="col s12 m5">
+            <br><br><br><br
+            <p class="caption">
+             Here is the standard card with an image thumbnail.
+            </p>
+            </div> -->
+        </div>
+      </div>
 
     </div>
 
