bug fixes and text cleanup

--- a/portfolio.html
+++ b/portfolio.html
@@ -102,12 +102,6 @@
               </div>
             </div>
           </div>
-          <div class="col s12 m5">
-            <br><br><br><br>
-            <p class="caption">
-             Here is the standard card with an image thumbnail.
-            </p>
-          </div>
         </div>
       </div>
 
@@ -135,7 +129,7 @@
             </div> -->
         </div>
       </div>
-      <div id="ramda" class="section scrollspy">
+      <div id="rambda" class="section scrollspy">
         <div class="row">
           <!-- Card Panel -->
           <div class="col s12 m5">
