remove top caption not currently is use

--- a/portfolio.html
+++ b/portfolio.html
@@ -62,9 +62,9 @@
           <!-- Image Card -->
           <div class="col s12 m12">
            <h2 class="header">Walkin.to</h2>
-            <p class="caption">
+            <!-- <p class="caption">
              Here is the standard card with an image thumbnail.
-            </p>
+             </p> -->
             <div class="card">
               <div class="card-image z-depth-1">
                 <img src="images/walkinto.png">
