fix to homepage and toast

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <!--<object id="front-page-logo" type="image/svg+xml" data="res/materialize.svg">Your browser does not support SVG</object></a></li>-->
         <li class="bold"><a href="index.html" class="waves-effect waves-red">About</a></li>
         <li class="bold"><a href="portfolio.html" class="waves-effect waves-red">Portfolio</a></li>
-        <li class="bold"><a href="#" class="waves-effect waves-red" onclick="Materialize.toast('Better contact me for this', 4000)">Résumé</a> </li>
+        <li class="bold"><a href="#" class="waves-effect waves-red" onclick="Materialize.toast('<span>Better contact me for this</span><a class=&quot;btn-flat yellow-text&quot; href=&quot mailto:tabruhn@gmail.com&quot;> Click here <a>', 4000)">Résumé</a> </li>
         <li class="bold"><a href="#" class="waves-effect waves-red" onclick="Materialize.toast('Coming Soon!', 4000)">Blog</a><li>
             </br>
           <div class="row">
@@ -51,7 +51,7 @@
             <img class="circle responsive-img z-depth-3" src="images/tyson.png" alt="Tyson Bruhn">
             <h2 class ="header col s12 light center">Hi, I'm Tyson. </h4>
             <h5 class ="header col s12 light center">I'm a full stack software engineer, and a recent CS graduate living in vancouver. </h5>
-            <h5 class ="header col s12 light center">I built the popular Hong Kong based startup walkin.to with some of my friends.  </h5>
+            <h5 class ="header col s12 light center">I built the popular Hong Kong based startup walkin.to, an app for venues interested in posting unique restaurant experiences and having them displayed in real time.</h5>
             <h5 class ="header col s12 light center">I like building scalable systems with functional programming and service oriented architecture. I am now considering junior/intermediate Scala and Javascript opportunities.</h5>
           </div>
           <div class="row center">
