update toast in portfolio to link to email

--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
             <!--<object id="front-page-logo" type="image/svg+xml" data="res/materialize.svg">Your browser does not support SVG</object></a></li>-->
         <li class="bold"><a href="index.html" class="waves-effect waves-red">About</a></li>
         <li class="bold"><a href="portfolio.html" class="waves-effect waves-red">Portfolio</a></li>
-        <li class="bold"><a href="#" class="waves-effect waves-red" onclick="Materialize.toast('Better contact me for this', 4000)">Résumé</a> </li>
+        <li class="bold"><a href="#" class="waves-effect waves-red" onclick="Materialize.toast('<span>Better contact me for this</span><a class=&quot;btn-flat yellow-text&quot; href=&quot mailto:tabruhn@gmail.com&quot;> Click here <a>', 4000)">Résumé</a> </li>
         <li class="bold"><a href="#" class="waves-effect waves-red" onclick="Materialize.toast('Coming Soon!', 4000)">Blog</a><li>
             </br>
           <div class="row">
