--- a/index.html
+++ b/index.html
@@ -32,13 +32,19 @@
             </br>
           <div class="row">
             <div class="col s3 waves-effect waves-circle">
-              <i class="small fa fa-github shadow"></i>
+              <a href="http://github.com/tabruhn">
+                <i class="small fa fa-github shadow"></i>
+              </a>
             </div>
             <div class="col s3 waves-effect waves-circle">
-              <i class="small fa fa-twitter shadow"></i>
+              <a href="http://twitter.com/tabruhn">
+                <i class="small fa fa-twitter shadow"></i>
+              </a>
             </div>
             <div class="col s3 waves-effect waves-circle">
-              <i class="small fa fa-linkedin shadow"></i>
+              <a href="https://ca.linkedin.com/in/tysonb">
+                <i class="small fa fa-linkedin shadow"></i>
+              </a>
             </div>
           </div>
         </li>
@@ -75,7 +81,7 @@
               </a>
             </div>
             <div class="col s4">
-              <a href="http://twitter.com/tabruhn" class="tooltipped wave-effect wave-circle" data-position="top" data-delay="50" data-tooltip="LinkedIn">
+              <a href="https://ca.linkedin.com/in/tysonb">
                 <i class="fa fa-linkedin fa-inverse fa-3x shadow"></i>
               </a>
             </div>
