collapsed menu styling update

--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,8 @@
   </head>
   <body>
     <header>
-      <div class="container"><a href="#" data-activates="nav-mobile" class="button-collapse top-nav waves-effect waves-light circle"><i class="mdi-navigation-menu"></i></a></div>
+      <div class="container"><a href="#" data-activates="nav-mobile" class="red lighten-2 button-collapse top-nav waves-effect waves-light circle"><i class="mdi-navigation-menu"></i></a></div>
+      <br>
       <ul id="nav-mobile" class="side-nav fixed">
         <li class="logo"><a id="logo-container" href="http://tabruhn.github.io/" class="brand-logo"> <h3 class="col s12 light center header"><b> TYSON </b>BRUHN </h3>
             <!--<object id="front-page-logo" type="image/svg+xml" data="res/materialize.svg">Your browser does not support SVG</object></a></li>-->
