--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <div class='row center'>
             <img class="circle responsive-img z-depth-3" src="images/tyson.png" alt="Tyson Bruhn">
             <h2 class ="header col s12 light center">Hi, I'm Tyson. </h4>
-            <h5 class ="header col s12 light center">I'm a full stack software engineer, and a recent CS graduate living in Vancouver. </h5>
+            <h5 class ="header col s12 light center">I'm a full stack software engineer, and a recent CS graduate living in Seattle. </h5>
             <h5 class ="header col s12 light center">I built the popular Hong Kong based startup walkin.to, an app for venues interested in posting unique restaurant experiences and having them displayed in real time.</h5>
             <h5 class ="header col s12 light center">I like building scalable systems with functional programming and service oriented architecture. I am now considering junior/intermediate Scala and Javascript opportunities.</h5>
           </div>
