[fix] spelling correction

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           At TUNE I've worked on a broad spectrum of projects across our company's diverse tech portfolio. I can dive into any part of our tech stack but the part I enjoy the most is building intuitive, delightful, and maintainable user interfaces and performant web-client architectures. A few of my accomplishments thus far:
             <ul>
               <li>
-                Acting as technical lead on many of our NPM private depencies. For example our internal UI component library built in ReactJS. This library includes hundreds of unit tested and documented components distributed via private NPM to developers across the world working on our web applications.
+                Acting as technical lead on several product teams. Maintaining many of our NPM private dependencies. For example our internal UI component library built in ReactJS. This library includes hundreds of unit tested and documented components distributed via private NPM to developers across the world working on our web applications.
               </li>
               <li>
                 Maintaining and developing new web applications with a diverse range of front-end technologies including React/Redux, Node.js, AngularJS, Vue, and even some PHP/jQuery.
